# claude-projects

./: LICENSE  README.md  pyproject.toml
agents/: project-helper.md
claude-code-plugin/: README.md
claude-code-plugin/agents/: project-helper.md
claude-code-plugin/skills/project-init/: SKILL.md
scripts/: init_project.py  template_utils.py
skills/project-init/: SKILL.md
skills/project-init/templates/basic/: README.md.template  gitignore.template  project-config.json.template
skills/project-init/templates/basic/docs/: api.md.template  developer-guide.md.template  user-guide.md.template
skills/project-init/templates/basic/src/: main.template
skills/project-init/templates/basic/tests/: README.md.template
src/projecthelper/: __init__.py  cli.py
src/projecthelper/core/: __init__.py  config.py  generator.py  templates.py
src/projecthelper/plugins/: __init__.py
src/projecthelper/templates/basic/: README.md.template  gitignore.template  template.yml
src/projecthelper/templates/rust-binary/: Cargo.toml.template  README.md.template  template.yml
src/projecthelper/templates/rust-binary/src/: cli.rs.template  main.rs.template
src/projecthelper/templates/rust-binary/src/commands/: hello.rs.template
src/projecthelper/templates/rust-library/: Cargo.toml.template  README.md.template  template.yml
src/projecthelper/templates/rust-library/src/: lib.rs.template
